# ViMantic-Unity3DNode

./: .gitignore  .gitmodules  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Pcx.Editor.csproj  Pcx.csproj  README.md  SemanticMap.owl  Semantic_mapping_project.sln  semantic_map.csproj  semantic_map.sln  semantic_mapping.sln
Assets/: Metro(Clone).prefab  packages.config
Assets/Resources/PointClouds/Alma/: PointCloud_Alma.prefab
Assets/Resources/PointClouds/Anto/: PointCloud_Anto.prefab
Assets/Resources/PointClouds/Pare/: PointCloud_Pare.prefab
Assets/Resources/PointClouds/Rx2/: PointCloud_Rx2.prefab
Assets/Resources/Prefabs/: SemanticObject.prefab
Assets/Resources/Prefabs/Dataset/: VirtualRobot.prefab
Assets/Resources/Prefabs/Semantic_Maps/: CanvasLabels.prefab  Robot.prefab  SemanticObject.prefab
Assets/Resources/Prefabs/Semantic_Rooms/: UI_Class.prefab
Assets/Resources/Prefabs/Vimantic/: Robot.prefab  SemanticObject.prefab  User.prefab
Assets/Resources/Prefabs/Virtual Sensors/: Camera RGB-D.prefab
Assets/RobotAtVirtualHome/Prefab/: VirtualRobot.prefab
Assets/RobotAtVirtualHome/Scripts/AI/: AIGrid.cs  AIWander.cs
Assets/RobotAtVirtualHome/Scripts/Core/: VirtualEnvironment.cs
Assets/Scenes/: Dataset.unity  Main.unity  RobotAtVirtualHome.unity  Vimantic - Robot@Home.unity
Assets/Scripts/: SemanticObject.cs  SemanticRoom.cs  VirtualSemanticObject.cs
Assets/Scripts/CoreRosUnity/ROSBridgeLib/: ROSBridgeMsg.cs
Assets/Scripts/Dataset/: GeneralManager.cs  IACaptureGrid.cs  IACaptureGrill.cs  IAWander.cs  Room.cs  VirtualEnvironment.cs
Assets/Scripts/Modules/: OntologyManager.cs  SceneManager.cs  SemanticMapping.cs  SemanticRoomManager.cs
Assets/Scripts/RobotAtVirtualHome/AI/: AIGrid.cs  AIWander.cs
Assets/Scripts/RobotAtVirtualHome/Struct/: Room.cs  VirtualEnvironment.cs
Assets/Scripts/Semantic_Maps/: GeneralManager.cs  ObjectManager.cs  OntologyManager.cs  SemanticObject.cs  VirtualSemanticObject.cs
Assets/Scripts/Semantic_Rooms/: SemanticRoom.cs  SemanticRoomManager.cs
Assets/Scripts/Utils/: CanvasLabelClass.cs  FlyCamera.cs  LineTwoObject.cs  LinesManager.cs  SmartCamera.cs
Assets/Scripts/Vimantic/Semantic_Maps/: GeneralManager.cs  ObjectManager.cs  SemanticObject.cs  VirtualSemanticObject.cs
Assets/Scripts/Vimantic/Semantic_Rooms/: SemanticRoomManager.cs
Assets/Vimantic/Prefab/: SemanticObject.prefab
Assets/Vimantic/Scripts/: GeneralManager.cs
Assets/Vimantic/Scripts/Core/: ObjectManager.cs  OntologyManager.cs  (+1 more)
Materials/: BoundingBoxMaterial.mat
Prefab/: BbCamera.prefab  CanvasLabels.prefab  Robot.prefab  RoomTrigger.prefab  SemanticObject.prefab  Unlit Color Only.shader  User.prefab  VirtualObjectBox.prefab
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
ROS_Stage/Semantic_mapping/: CMakeLists.txt  README.md  package.xml
ROS_Stage/Semantic_mapping/MaskRCNNVersion/: node_semantic_mapping_mask_rcnn.py
ROS_Stage/Semantic_mapping/YoloVersion/: CMakeLists.txt  README.md  node_semantic_mapping_yolo.py  package.xml
ROS_Stage/Semantic_mapping/launch/: Semantic_mapping.launch  Semantic_mapping_config_rviz.rviz
ROS_Stage/Semantic_mapping/msg/: SemanticObject.msg  SemanticObjects.msg
ROS_Stage/Semantic_mapping/src/: node_semantic_mapping.py  node_semantic_mapping_rcnn.py
Resources/: BoundingBoxMaterial.mat
Scenes/: Vimantic - Robot@Home.unity
Scripts/: GeneralManager.cs
Scripts/Core/: LogLevel.cs  ObjectManager.cs  ObjectManagerSystem.cs  OntologyManager.cs  OntologySystem.cs  SemanticObject.cs  VirtualObjectBox.cs  VirtualObjectSystem.cs
Scripts/Editor/: EditorOntologySystem.cs
Scripts/Semantic_Rooms/: SemanticRoom.cs  SemanticRoomManager.cs
Scripts/Utils/: CanvasLabelClass.cs  ColorView.cs  FlyCamera.cs  LinesManager.cs  Unlit Color Only.shader
Unity_Stage/Semantic_mapping/: README.md  Unity.gitignore  packages.config
Unity_Stage/Semantic_mapping/Assets/: packages.config
(+118 files in other folders)
